[Modals] Fix bad z-index due to Weprode component import

--- a/src/design/nero-theme.scss
+++ b/src/design/nero-theme.scss
@@ -18,9 +18,6 @@ $input-background-color: $background-grey-color;
 $border-nero: 1px solid #f4f4f4;
 $border-radius-nero: 6px;
 
-// Z-indexes
-$modal-z-index: 100;
-
 // Global classes extends
 %item-shadow {
   box-shadow: 0 2px 14px rgba(0, 0, 0, 0.2);
